--- a/slavatracks/templates/index.html
+++ b/slavatracks/templates/index.html
@@ -21,7 +21,7 @@
       </header>
 
       <main class="container">
-        <section id="rec-form">
+        <section id="addTrackSection">
           <form @submit.prevent="addTrack">
             <fieldset>
               <input type="text" v-model="trackTitleInput" name="title" placeholder="Track Title *" required />
@@ -50,11 +50,14 @@
             </fieldset>
           </form>
         </section>
+        <section id="trackListSection">
+          {{ trackList }}
+        </section>
       </main>
     </div>
 
     <script>
-        const { createApp, ref } = Vue;
+        const { createApp, ref, onMounted } = Vue;
 
         createApp({
             setup() {
@@ -63,7 +66,7 @@
                 const streamingLinkInput = ref(null);
                 const argentineTangoCheckbox = ref(null);
                 const bachataCheckbox = ref(null);
-                const data = ref(null);
+                const trackList = ref([]);
 
                 const addTrack = async () => {
                     try {
@@ -74,10 +77,17 @@
                         argentine_tango: argentineTangoCheckbox.value,
                         bachata: bachataCheckbox.value
                       });
+                      trackList.value = response.data;
                     } catch (error) {
-                        console.error('Error adding track:', error);
+                      console.error('Error adding track:', error);
                     }
                 };
+
+                onMounted(async () => {
+                  console.log("MOUNTED");
+                  const response = await axios.get('/tracks/');
+                  trackList.value = response.data;
+                });
 
                 return {
                   trackTitleInput,
@@ -85,7 +95,8 @@
                   streamingLinkInput,
                   argentineTangoCheckbox,
                   bachataCheckbox,
-                  addTrack
+                  addTrack,
+                  trackList
                 };
             }
         }).mount('#app');
