--- a/slavatracks/templates/index.html
+++ b/slavatracks/templates/index.html
@@ -51,7 +51,11 @@
           </form>
         </section>
         <section id="trackListSection">
-          {{ trackList }}
+          <article v-for="track in trackList">
+            <div class="trackTitle">{{ track.title }}<div>
+            <div class="trackArtist">{{ track.artist }}</div>
+            <div class="trackStreamingLink">{{ track.streaming_link }}</div>
+          </article>
         </section>
       </main>
     </div>
