helper functions and all styles in drop-down

--- a/slavatracks/templates/index.html
+++ b/slavatracks/templates/index.html
@@ -31,18 +31,28 @@
                   Styles
                 </summary>
                 <ul>
-                  <li>
-                    <label>
-                      <input type="checkbox" v-model="argentineTangoCheckbox" name="argentine-tango" />
-                        Argentine Tango
-                    </label>
-                  </li>
-                  <li>
-                    <label>
-                      <input type="checkbox" v-model="bachataCheckbox" name="bachata" />
-                      Bachata
-                    </label>
-                  </li>
+                  <li><label><input type="checkbox" v-model="argentineTangoCheckbox" name="argentine-tango" />Argentine Tango</label></li><li>
+                  <li><label><input type="checkbox" v-model="bachataCheckbox" name="bachata" />Bachata</label></li><li>
+                  <li><label><input type="checkbox" v-model="boleroCheckbox" name="bolero" />Bolero</label></li><li>
+                  <li><label><input type="checkbox" v-model="chaChaCheckbox" name="cha-cha" />Cha Cha</label></li><li>
+                  <li><label><input type="checkbox" v-model="eastCoastSwingCheckbox" name="east-coast-swing" />East Coast Swing</label></li><li>
+                  <li><label><input type="checkbox" v-model="foxtrotCheckbox" name="foxtrot" />Foxtrot</label></li><li>
+                  <li><label><input type="checkbox" v-model="hustleCheckbox" name="hustle" />Hustle</label></li><li>
+                  <li><label><input type="checkbox" v-model="jiveCheckbox" name="jive" />Jive</label></li><li>
+                  <li><label><input type="checkbox" v-model="lindyHopCheckbox" name="lindy-hop" />Lindy Hop</label></li><li>
+                  <li><label><input type="checkbox" v-model="mamboCheckbox" name="mambo" />Mambo</label></li><li>
+                  <li><label><input type="checkbox" v-model="merengueCheckbox" name="merengue" />Merengue</label></li><li>
+                  <li><label><input type="checkbox" v-model="nightClub2StepCheckbox" name="night-club-2-step" />Night Club 2 Step</label></li><li>
+                  <li><label><input type="checkbox" v-model="pasoDobleCheckbox" name="paso-doble" />Paso Doble</label></li><li>
+                  <li><label><input type="checkbox" v-model="peabodyCheckbox" name="peabody" />Peabody</label></li><li>
+                  <li><label><input type="checkbox" v-model="quickstepCheckbox" name="quickstep" />Quickstep</label></li><li>
+                  <li><label><input type="checkbox" v-model="rumbaCheckbox" name="rumba" />Rumba</label></li><li>
+                  <li><label><input type="checkbox" v-model="salsaCheckbox" name="salsa" />Salsa</label></li><li>
+                  <li><label><input type="checkbox" v-model="sambaCheckbox" name="samba" />Samba</label></li><li>
+                  <li><label><input type="checkbox" v-model="tangoCheckbox" name="tango" />Tango</label></li><li>
+                  <li><label><input type="checkbox" v-model="vienneseWaltzCheckbox" name="viennese-waltz" />Viennese Waltz</label></li><li>
+                  <li><label><input type="checkbox" v-model="waltzCheckbox" name="waltz" />Waltz</label></li><li>
+                  <li><label><input type="checkbox" v-model="westCoastSwingCheckbox" name="west-coast-swing" />West Coast Swing</label></li><li>
                 </ul>
               </details>
               <button type="submit" class="add-track-button">Add</button>
