--- a/slavatracks/templates/index.html
+++ b/slavatracks/templates/index.html
@@ -23,9 +23,16 @@
       </header>
 
       <main class="container">
-
         <section id="addTrackSection">
-          <button v-if="errorMessage" @click="errorButtonClick" type="submit" class="error-message-button"><span style="float: right;font-weight: bold;">X</span>{{ errorMessage }}</button>
+          <button
+            v-if="errorMessage"
+            @click="errorButtonClick"
+            type="submit"
+            class="error-message-button"
+          >
+            <span style="float: right; font-weight: bold">X</span>{{
+            errorMessage }}
+          </button>
           <form @submit.prevent="addTrack">
             <fieldset>
               <input
@@ -318,7 +325,7 @@
 
           const errorButtonClick = () => {
             location.reload();
-          }
+          };
 
           const addTrack = async () => {
             try {
